# prng

./: LICENSE  README.md
LinearCongruentialGenerator/src/cpp/src/: CMakeLists.txt  build_clang.sh  build_gpp.sh  demolcg.cpp  lcg.cpp  lcg.h  testboostlcg.cpp  testlcg.cpp
LinearCongruentialGenerator/src/js/: lcg.js  test_lcg.html  test_lcg.js
